--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,28 @@
-version: "3.9"
 services:
   postgres:
+    container_name: postgres_db
     image: postgres:latest
     restart: always
     environment:
-      - POSTGRES_PASSWORD=root
-      - POSTGRES_USER=root
-      - POSTGRES_DB=clean_architecture
+      POSTGRES_PASSWORD: root
+      POSTGRES_USER: root
+      POSTGRES_DB: clean_architecture
     ports:
       - "5432:5432"
     volumes:
       - db:/var/lib/postgresql/data
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
 
 volumes:
   db:
